--- a/control/content/assets/css/control.content.css
+++ b/control/content/assets/css/control.content.css
@@ -4,20 +4,23 @@ body {
 
 body.modal-open {
     overflow: hidden !important;
-  }
+}
 
 .disabled {
     pointer-events: none;
     opacity: 0.5;
 }
+
 .edit_cell {
     width: 15px;
     cursor: pointer;
 }
-#scroll-infinite{
+
+#scroll-infinite {
     overflow-y: auto;
     max-height: 245px;
 }
+
 /*
 Style for loader
 */
@@ -31,8 +34,12 @@ Style for loader
     box-shadow: 0 2px 20px 0 rgba(0, 0, 0, 0.1);
     z-index: 1001;
     border-radius: 50%;
-    left:0; right: 0; top: 0; bottom: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
 }
+
 .item .alert-warning {
     background-color: #fcf8e3;
     border-color: #faebcc;
@@ -47,16 +54,17 @@ Style for loader
     position: fixed;
 }
 
-.side-menu > a {
+.side-menu>a {
     padding: 0.5rem 1rem 0.5rem 0.5rem;
     min-width: 100%;
     border: 1px solid var(--c-gray3);
     border-radius: 0.25rem;
     display: block;
-    color: var(--c-gray3);;
+    color: var(--c-gray3);
+    ;
 }
 
-.side-menu > a.active {
+.side-menu>a.active {
     border: 1px solid #00a1f1;
     color: #00a1f1;
 }
@@ -64,48 +72,71 @@ Style for loader
 /* Sidenav Style */
 
 .sidenav-container {
-	display: flex;
-	overflow: hidden;
+    display: flex;
+    overflow: hidden;
 }
 
 .sidenav {
-	width: 170px;
-	flex-shrink: 0;
-	padding-right: 1rem;
+    width: 170px;
+    flex-shrink: 0;
+    padding-right: 1rem;
 }
 
 .sidenav li a {
-	border-radius: 4px;
-	color: #000;
-	border: 1px solid #d3d2d2;
-	padding: 7px 10px;
-	display: flex;
-	align-items: center;
-	font-size: 13px;
-	margin-bottom: 8px;
-	cursor: pointer;
-	justify-content: space-between;
+    border-radius: 4px;
+    color: #000;
+    border: 1px solid #d3d2d2;
+    padding: 7px 10px;
+    display: flex;
+    align-items: center;
+    font-size: 13px;
+    margin-bottom: 8px;
+    cursor: pointer;
+    justify-content: space-between;
 }
 
 .sidenav li a.active,
 .sidenav li a.active:hover {
-	border: 1px solid #00a1f1;
-	color: #00a1f1;
+    border: 1px solid #00a1f1;
+    color: #00a1f1;
 }
 
 .sidenav li a.active p {
-	color: #00a1f1;
+    color: #00a1f1;
 }
 
 .sidenav li p {
-	margin: 0;
+    margin: 0;
 }
 
 .sidenav-content {
-	overflow-y: auto;
-	max-height: calc(100vh - 45px);
-	padding: 0 1rem;
-	flex: auto;
+    overflow-y: auto;
+    max-height: calc(100vh - 45px);
+    padding: 0 1rem;
+    flex: auto;
+}
+
+.required {
+    color: var(--c-danger)
+}
+
+
+.empty-state {
+    min-height: 15rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 4rem;
+    border-radius: 0.25rem;
+    background-color: var(--c-gray1);
+    border: 1px solid var(--c-gray3);
+}
+
+.empty-state h5 {
+    color: var(--c-gray6);
+    font-weight: 700;
+    font-size: 16px;
+    -webkit-text-stroke: 0;
 }
 
 /* End Sidenav Style */
@@ -113,12 +144,17 @@ Style for loader
 .hide-list {
     margin-bottom: 0;
 }
+
 .hide-list .sortable-list-container {
     display: none;
 }
 
 .sortable-list-container {
     min-height: 30vh;
+}
+
+.sortable-list-actions-container>.sortable-list-add-button {
+    margin: 0 !important;
 }
 
 .modal-header {
@@ -174,21 +210,21 @@ Style for loader
 }
 
 .plus {
-    display:inline-block;
-    width:30px;
-    height:30px;
-    
-    background:
-      linear-gradient(#14cb5d 0 0),
-      linear-gradient(#14cb5d 0 0),
-      #eef0f0;
-    background-position:center;
-    background-size: 50% 4px,4px 50%; /*thickness = 2px, length = 50% (25px)*/
-    background-repeat:no-repeat;
-    cursor: pointer;
-  }
+    display: inline-block;
+    width: 30px;
+    height: 30px;
 
-  .x {
+    background:
+        linear-gradient(#14cb5d 0 0),
+        linear-gradient(#14cb5d 0 0),
+        #eef0f0;
+    background-position: center;
+    background-size: 50% 4px, 4px 50%;
+    background-repeat: no-repeat;
+    cursor: pointer;
+}
+
+.x {
     border-radius: 50%;
     padding: 0.5em;
     width: 20px;
@@ -196,18 +232,19 @@ Style for loader
     border: 2px solid var(--bf-theme-danger);
     color: white;
     position: relative;
-    background-color:var(--bf-theme-danger);
+    background-color: var(--bf-theme-danger);
     opacity: 0;
     position: absolute;
-    top:5px;
+    top: 5px;
     right: 5px;
     cursor: pointer;
-  }
-  .x:hover {
+}
+
+.x:hover {
     opacity: 1;
-  }
-  
-  .x::before {
+}
+
+.x::before {
     content: " ";
     position: absolute;
     display: block;
@@ -217,231 +254,299 @@ Style for loader
     top: -15px;
     bottom: -8px;
     transform: rotate(45deg);
-  }
- .x::after {
+}
+
+.x::after {
     content: " ";
     position: absolute;
     display: block;
     background-color: white;
     height: 2px;
-    top:7px;
+    top: 7px;
     left: -3px;
     right: -2px;
     transform: rotate(45deg);
-  }
+}
 
- .category-container {
+.category-container {
     flex: 1;
     padding: 10px;
     margin-top: 20px;
     margin-bottom: 20px;
     border: 1px solid lightgray;
     border-radius: 0.25rem 0 0 0.25rem;
- }
+}
 
- .category-container .top-row {
+.category-container .top-row {
     display: flex;
     flex-direction: row;
     margin-bottom: 10px;
- }
+}
 
-    .category-container .top-row .category-name {
-        font-size: 0.9rem;
-        color: black;
-        margin: 0;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
+.category-container .top-row .category-name {
+    font-size: 0.9rem;
+    color: black;
+    margin: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
-    .category-container .top-row .category-description {
-        font-size: 0.7rem;
-        color: lightgray;
-        font-weight: lighter;
-        margin-top: 5px;
-    }
+.category-container .top-row .category-description {
+    font-size: 0.7rem;
+    color: lightgray;
+    font-weight: lighter;
+    margin-top: 5px;
+}
 
-    .category-container .top-row .toggle-wrapper {
-        margin-left: auto;
-    }
+.category-container .top-row .toggle-wrapper {
+    margin-left: auto;
+}
 
-    .category-container .subcategories-container {
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        padding: 10px;
-        margin-top: 20px;
-        margin-bottom: 20px;
-        width: 70%;
-        margin-left: auto;
-        margin-right: auto;
-        /* transition: all .5s ease-in-out;
-        transform-origin: left top;
-        transform: scaleY(1); */
-    }
+.category-container .subcategories-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
 
-    .category-container .subcategories-container .subcategory {
-        display: flex;
-        width: 50%;
-        margin-top: 10px;
-    }
+.category-container .subcategories-container .subcategory {
+    display: flex;
+    width: 50%;
+    margin-top: 10px;
+}
 
-    .category-container .subcategories-container .subcategory .subcategory-name {
-        font-size: 0.7rem;
-        color: #909090;
-        margin: gray;
-        margin-left: 5px;
-    }
+.category-container .subcategories-container .subcategory .subcategory-name {
+    font-size: 0.7rem;
+    color: #909090;
+    margin: gray;
+    margin-left: 5px;
+}
 
-    .button-switch{
-        display: flex;
-        align-items: center;
-        height: 2.5rem;
-      }
-      
-      .button-switch > label {
-        cursor: pointer;
-        height: 0;
-        position: relative;
-        width: 40px;
-        text-align: left;
-      }
-      
-      .button-switch > label::before {
-        background: #909090;
-        border-radius: 18px;
-        content: "";
-        height: 27px;
-        margin-top: -13.5px;
-        position: absolute;
-        opacity: 0.3;
-        transition: all 0.4s ease-in-out;
-        width: 46px;
-      }
-      
-      .button-switch > label::after {
-        background: var(--c-white);
-        border-radius: 16px;
-        box-shadow: 0 0 5px rgb(0 0 0 / 30%);
-        content: "";
-        height: 24px;
-        left: 0;
-        margin-top: -9px;
-        position: absolute;
-        top: -4px;
-        transition: all 0.3s ease-in-out;
-        width: 24px;
-      }
-      
-      .button-switch > input[type="checkbox"]:checked + label::before {
-        background: inherit;
-        opacity: 0.5;
-      }
-      
-      .button-switch > input[type="checkbox"] {
-        display: none;
-        margin: 4px 0 0;
-      }
-      
-      .button-switch > input[type="checkbox"]:checked + label::after {
-        background: inherit;
-        left: 23px;
-      }
-      
-      .button-switch.switch-sm > label::before {
-        background: #909090;
-        border-radius: 18px;
-        content: "";
-        height: 1.5rem;
-        margin-top: 0;
-        position: absolute;
-        opacity: 0.3;
-        transition: all 0.4s ease-in-out;
-        width: 3rem;
-      }
-      
-      .button-switch.switch-sm > label::after {
-        background: var(--c-white);
-        border-radius: 16px;
-        box-shadow: 0 0 5px rgb(0 0 0 / 30%);
-        content: "";
-        left: 0;
-        margin-top: 0;
-        position: absolute;
-        top: -12px;
-        transition: all 0.3s ease-in-out;
-        height: 1.5rem;
-        width: 1.5rem;
-      }
-      
-      .button-switch.switch-sm > label{
-        display: flex;
-        align-items: center;
-        width: 2rem;
-      }
+.button-switch {
+    display: flex;
+    align-items: center;
+    height: 2.5rem;
+}
 
-      #actionItems .btn-success {
-          width: 10rem !important;
-      }
+.button-switch>label {
+    cursor: pointer;
+    height: 0;
+    position: relative;
+    width: 40px;
+    text-align: left;
+}
 
-        #actionItems .clearfix::after {
-            clear: none !important;
-        }
+.button-switch>label::before {
+    background: #909090;
+    border-radius: 18px;
+    content: "";
+    height: 27px;
+    margin-top: -13.5px;
+    position: absolute;
+    opacity: 0.3;
+    transition: all 0.4s ease-in-out;
+    width: 46px;
+}
 
-        #actionItems .clearfix a {
-            float: right !important;
-        }
+.button-switch>label::after {
+    background: var(--c-white);
+    border-radius: 16px;
+    box-shadow: 0 0 5px rgb(0 0 0 / 30%);
+    content: "";
+    height: 24px;
+    left: 0;
+    margin-top: -9px;
+    position: absolute;
+    top: -4px;
+    transition: all 0.3s ease-in-out;
+    width: 24px;
+}
 
-        #categories {
-            background-color: var(--c-gray2);
-            padding: 10px;
-            border-radius: 5px;
-        }
+.button-switch>input[type="checkbox"]:checked+label::before {
+    background: inherit;
+    opacity: 0.5;
+}
 
-        #categories h2 {
-            margin-bottom: 0.25rem;
-            font-size: 1rem;
-            font-weight: bold;
-        }
+.button-switch>input[type="checkbox"] {
+    display: none;
+    margin: 4px 0 0;
+}
 
-        .full-width {
-			width: 100%;
-		}
+.button-switch>input[type="checkbox"]:checked+label::after {
+    background: inherit;
+    left: 23px;
+}
 
-        .categoryIcon {
-            object-fit: none;
-            height: 40px !important;
-            width: 40px !important;
-        }
+.button-switch.switch-sm>label::before {
+    background: #909090;
+    border-radius: 18px;
+    content: "";
+    height: 1.5rem;
+    margin-top: 0;
+    position: absolute;
+    opacity: 0.3;
+    transition: all 0.4s ease-in-out;
+    width: 3rem;
+}
 
-        .categoryScreenIcon {
-            object-fit: none;
-            height: 30px !important;
-            width: 30px !important;
-        }
+.button-switch.switch-sm>label::after {
+    background: var(--c-white);
+    border-radius: 16px;
+    box-shadow: 0 0 5px rgb(0 0 0 / 30%);
+    content: "";
+    left: 0;
+    margin-top: 0;
+    position: absolute;
+    top: -12px;
+    transition: all 0.3s ease-in-out;
+    height: 1.5rem;
+    width: 1.5rem;
+}
 
-        .auto-flex {
-            flex: auto !important;
-        }
+.button-switch.switch-sm>label {
+    display: flex;
+    align-items: center;
+    width: 2rem;
+}
 
-        .row-category-title {
-            width: 120px !important;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
+#actionItems .btn-success {
+    width: 10rem !important;
+}
 
-        .draggable-list-view .d-item.double-line .copy.fit {
-            width: 82.5% !important;
-            max-width: 82.5% !important;
-        }
+#actionItems .clearfix::after {
+    clear: none !important;
+}
+
+#actionItems .clearfix a {
+    float: right !important;
+}
+
+#categories {
+    background-color: var(--c-gray2);
+    padding: 10px;
+    border-radius: 5px;
+}
+
+#categories h2 {
+    margin-bottom: 0.25rem;
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.full-width {
+    width: 100%;
+}
+
+.categoryIcon {
+    object-fit: none;
+    height: 40px !important;
+    width: 40px !important;
+}
+
+.categoryScreenIcon {
+    object-fit: none;
+    height: 30px !important;
+    width: 30px !important;
+}
+
+.auto-flex {
+    flex: auto !important;
+}
+
+.row-category-title {
+    width: 120px !important;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.draggable-list-view .d-item.double-line .copy.fit {
+    width: 82.5% !important;
+    max-width: 82.5% !important;
+}
 
 
-        .links-list.hide-empty.dynamic-link-list.draggable-list-view{
-            margin-top: 40px !important;
-        }
+.links-list.hide-empty.dynamic-link-list.draggable-list-view {
+    margin-top: 40px !important;
+}
 
-        .item.clearfix.row{
-            display: flex;
-        }
+.item.clearfix.row {
+    display: flex;
+}
+
+.sortable-list-item>.sortable-list-item-actions>.btn--icon {
+    aspect-ratio: 1;
+}
+
+/* image carousel override */
+#carousel .item.clearfix .col-md-3 {
+    width: calc(100% / 3);
+}
+
+#carousel .item.clearfix .col-md-9 {
+    width: 100%;
+    padding-left: 0;
+}
+
+#carousel .item.clearfix .col-md-9 .btn {
+    float: right !important;
+    color: #05acf0 !important;
+    background-color: transparent !important;
+    border: 1px solid var(--c-primary);
+    padding: 6px 12px 6px 20px !important;
+    width: 100%;
+}
+
+#carousel .item.clearfix .col-md-9 .btn:hover {
+    background-color: #f2f2f2 !important;
+}
+
+#carousel .item.clearfix .col-md-9 .btn::before,
+#carousel .item.clearfix .col-md-9 .btn::after {
+    background-color: var(--c-primary) !important;
+    left: unset;
+    right: 72%;
+}
+
+#carousel .item.clearfix .col-md-9 .clearfix {
+    padding-left: 30px;
+    width: fit-content;
+    margin-left: auto;
+}
+
+#carousel .item.clearfix .col-md-9 .carousel-items {
+    max-height: 50vh;
+    overflow: auto;
+}
+
+#carousel .item.clearfix .col-md-9 .carousel-items .d-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+#carousel .item.clearfix .col-md-9 .carousel-items .d-item .icon-menu {
+    top: 0;
+    display: flex;
+    align-items: center;
+    margin: 0;
+}
+
+#carousel .item.clearfix .col-md-9 .carousel-items .d-item .copy {
+    flex: 1;
+    width: auto;
+    max-width: auto;
+    top: 0;
+}
+
+#carousel .item.clearfix .col-md-9 .carousel-items .copy .title {
+    width: fit-content;
+    max-width: 45%;
+}
