fix(CP): remove all useless files
remove bf-base overrides files

--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -1,4 +1,4 @@
-<div class="has-bottom-actions">
+<div class="has-bottom-actions padding-bottom-thirty">
     <div id="subcategoryModal" class="modal fade" role="dialog" ng-if="ContentMedia.showCatModal">
         <div class="modal-dialog">
 
@@ -73,11 +73,6 @@
                                             for="subcategory.id">{{subcategory.name}}</label><br>
                                     </div>
                                 </div>
-                                <!-- <h2>{{category.data.name}}</h4>
-                                    <div ng-repeat="subcategory in category.data.subcategories">
-                                        <input type="checkbox" id="subcategory.id" name="subcategory.name" ng-click="ContentMedia.pickSubcategory(category.id, subcategory.id)" value="subcategory.checked">
-                                        <label for="subcategory.id">{{subcategory.name}}</label><br>
-                                    </div> -->
                             </div>
 
                         </div>
