--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -1,20 +1,20 @@
-<!-- <div class="loader-pan" ng-show="ContentHome.loading"></div> -->
+<div class="loader-pan" ng-show="loading"></div>
 <div class="content-home-container">
     <div id="sidenav-container" class="sidenav-container">
         <ul id="sidenav" class="sidenav disabled-links">
             <li id="locations-tab">
-                <a ng-click="ContentHome.toggleHomeView('media')" ng-class="{ 'active': ContentHome.activeTab === 'content-media-tab' }">
+                <a ng-click="ContentHome.toggleHomeView('media')" ng-class="{ 'active': activeTab === 'content-media-tab' }">
                     <p>Media</p>
                 </a>
             </li>
             <li id="categories-tab">
-                <a ng-click="ContentHome.toggleHomeView('category')" ng-class="{ 'active': ContentHome.activeTab === 'content-category-tab' }">
+                <a ng-click="ContentHome.toggleHomeView('category')" ng-class="{ 'active': activeTab === 'content-category-tab' }">
                     <p>Categories</p>
                 </a>
             </li>
         </ul>
         <div id="sidenav-content" class="sidenav-content">
-            <div ng-show="ContentHome.activeTab === 'content-media-tab'" class="media-home">
+            <div ng-show="activeTab === 'content-media-tab'" class="media-home">
                 <div style="flex: 5;" ng-class="!ContentHome.showFilters ? 'full-width' : 'filter-home'">
                     <div class="margin-bottom-thirty" id="carousel"></div>
 
@@ -25,11 +25,11 @@
                     </div>
 
                     <!-- TODO: this modal should be updated to the standard one -->
-                    <div class="item clearfix row margin-top-thirty" data-ng-show="ContentHome.csvDataInvalid">
+                    <div class="item clearfix row margin-top-thirty" data-ng-show="csvDataInvalid">
                         <div class="labels col-md-12">
                             <div class="alert alert-warning">
                                 <a href="javascript:void(0)" class="close"
-                                    data-ng-click="ContentHome.csvDataInvalid=false">×</a>
+                                    data-ng-click="csvDataInvalid=false">×</a>
                                 <strong>Note!</strong>Uploaded CSV data is incomplete.Title/Summary is required.
                             </div>
                         </div>
@@ -46,7 +46,7 @@
                 </div>
             </div>
             
-            <div ng-show="ContentHome.activeTab === 'content-category-tab'" class="category-home">
+            <div ng-show="activeTab === 'content-category-tab'" class="category-home">
                 <div class="categoriesListContainer margin-bottom-thirty">
                     <div ng-controller="ContentCategoryHomeListCtrl">
                         <div id="categoriesList"></div>
