--- a/control/content/assets/css/control.content.css
+++ b/control/content/assets/css/control.content.css
@@ -132,6 +132,12 @@ Style for loader
     border: 1px solid var(--c-gray3);
 }
 
+.small-empty-state {
+    min-height: unset;
+    max-height: 5rem;
+    padding: 2rem;
+}
+
 .empty-state h5 {
     color: var(--c-gray6);
     font-weight: 700;
@@ -164,49 +170,6 @@ Style for loader
 
 .modal-footer {
     border-top: 1px solid rgba(50, 50, 50, 0.5);
-}
-
-.modal-dialog .modal-body {
-    max-height: 60vh;
-    overflow-y: auto;
-}
-
-#subcategoryModal .modal-dialog {
-    max-width: initial;
-}
-
-#subcategoryModal .modal-body {
-    padding: 20px 15px 10px;
-}
-
-#subcategoryModal .modal-footer {
-    border-top: none;
-    display: flex;
-    flex-direction: row-reverse;
-}
-
-#subcategoryModal .modal-footer button {
-    padding: 8px 30px;
-}
-
-#subcategoryModal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 1000;
-    display: block;
-    opacity: 1;
-}
-
-#subcategoryModal .modal-dialog {
-    position: absolute;
-    top: 50% !important;
-    left: 50% !important;
-    transform: translate(-50%, -50%);
-    max-width: 30rem;
 }
 
 .plus {
@@ -416,18 +379,6 @@ Style for loader
     width: 2rem;
 }
 
-#actionItems .btn-success {
-    width: 10rem !important;
-}
-
-#actionItems .clearfix::after {
-    clear: none !important;
-}
-
-#actionItems .clearfix a {
-    float: right !important;
-}
-
 #categories {
     background-color: var(--c-gray2);
     padding: 10px;
@@ -485,6 +436,60 @@ Style for loader
     aspect-ratio: 1;
 }
 
+.search-bar {
+    position: relative;
+    display: flex;
+    align-items: center;
+    border: 1px solid var(--c-gray3);
+    border-radius: .25rem;
+}
+
+.search-bar input {
+    flex: auto;
+    border: 0;
+    border-radius: .25rem 0 0 .25rem;
+}
+
+.search-bar .btn.btn-info{
+    border-radius: 0 .25rem .25rem 0;
+    min-width: unset;
+}
+
+.search-bar .btn.btn-info .search-icon {
+    width: 1rem;
+    height: 1rem;
+    position: relative;
+    display: block;
+}
+
+.search-bar .btn.btn-info .search-icon::before {
+    display: block;
+    content: '';
+    border-radius: 50%;
+    width: .75rem;
+    height: .75rem;
+    border: 1px solid var(--c-white);
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
+.search-bar .btn.btn-info .search-icon::after {
+    display: block;
+    content: '';
+    width: 1px;
+    height: .5rem;
+    background-color: var(--c-white);
+    transform: rotate(-45deg);
+    top: .5rem;
+    left: .75rem;
+    position: absolute;
+}
+
+.media-content-container {
+    padding-bottom: 4rem !important;
+}
+
 /* image carousel override */
 #carousel .item.clearfix .col-md-3 {
     width: calc(100% / 3);
@@ -526,12 +531,14 @@ Style for loader
     overflow: auto;
 }
 
+#actionItems .item.clearfix .col-md-9 .carousel-items .d-item,
 #carousel .item.clearfix .col-md-9 .carousel-items .d-item {
     display: flex;
     align-items: center;
     gap: 10px;
 }
 
+#actionItems .item.clearfix .col-md-9 .d-item .icon-menu,
 #carousel .item.clearfix .col-md-9 .carousel-items .d-item .icon-menu {
     top: 0;
     display: flex;
@@ -539,6 +546,7 @@ Style for loader
     margin: 0;
 }
 
+#actionItems .item.clearfix .col-md-9 .d-item .copy,
 #carousel .item.clearfix .col-md-9 .carousel-items .d-item .copy {
     flex: 1;
     width: auto;
@@ -549,4 +557,32 @@ Style for loader
 #carousel .item.clearfix .col-md-9 .carousel-items .copy .title {
     width: fit-content;
     max-width: 45%;
+}
+
+/* action items list override */
+#actionItems .main .btn-success {
+    float: right !important;
+}
+
+#actionItems .main .draggable-list-view {
+    margin-top: 10px !important;
+}
+
+#actionItems .draggable-list-view .d-item {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#audioImage .screen {
+    width: auto;
+    max-width: unset;
+}
+
+#audioImage .screen .default-background-hover {
+    max-width: unset;
+}
+
+.bottom-actions {
+    z-index: 1000;
 }
