--- a/control/content/templates/category.html
+++ b/control/content/templates/category.html
@@ -1,30 +1,4 @@
 <div class="has-bottom-actions margin-right-fifteen padding-bottom-thirty">
-    <div id="subcategoryModal" class="modal fade" role="dialog" ng-show="ContentCategory.showSubModal">
-        <div class="modal-dialog">
-
-            <!-- Modal content-->
-            <div class="modal-content backgroundColorTheme">
-                <div class="modal-header">
-                    <button ng-click="ContentCategory.closeSubcategoryModal()" style="margin-top: 0;" type="button"
-                        class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></button>
-                    <h4 class="modal-title">{{ContentCategory.addSubcategoryTitle}}</h4>
-                </div>
-                <div class="modal-body">
-                    <p>Subcategory Name</p>
-                    <input type="text" class="form-control" ng-model="ContentCategory.subcategoryTitle" maxlength="30"
-                        placeholder="Enter name">
-                    <div class="text-danger" ng-show="subcategoryTitlequired">A title is required</div>
-                </div>
-                <div class="modal-footer">
-                    <button ng-click="ContentCategory.updateSubcategory()" type="button"
-                        class="btn btn-success">Save</button>
-                    <button type="button" style="margin-right: 10px;border:1px solid var(--c-gray3);" class="btn"
-                        ng-click="ContentCategory.closeSubcategoryModal()">Cancel</button>
-                </div>
-            </div>
-
-        </div>
-    </div>
     <div id="breadcrumbs">
         <ol class="breadcrumb">
             <li><a href="#/categoryHome">Categories</a></li>
@@ -46,9 +20,9 @@
                         ng-click="ContentCategory.addIcon()">
                         <span ng-if="!ContentCategory.item.data.icon" class="add-icon"
                             style="height: 82px; margin: -8px;">+</span>
-                        <img class="categoryScreenIcon"  load-image="1x1"  aspect="1:1" size="xxs"
-                         crop-type="crop" ng-if="ContentCategory.item.data.icon && !ContentCategory.isIcon()"
-                        data-final-src="{{ContentCategory.item.data.icon }}">
+                        <img class="categoryScreenIcon" load-image="1x1" aspect="1:1" size="xxs" crop-type="crop"
+                            ng-if="ContentCategory.item.data.icon && !ContentCategory.isIcon()"
+                            data-final-src="{{ContentCategory.item.data.icon }}">
                         <div style="color:#5f5f5f" ng-if="ContentCategory.item.data.icon && ContentCategory.isIcon()"
                             ng-class="ContentCategory.item.data.icon">
                         </div>
@@ -83,9 +57,9 @@
 
     <div class="bottom-actions">
         <a class="btn btn-default btn-outlined margin-right-ten" style="border: 1px solid #ddd;"
-            ng-disabled="ContentCategory.saving" ng-click="ContentCategory.done()"
-            href="javaScript:void(0);">Cancel</a>
+            ng-disabled="ContentCategory.saving" ng-click="ContentCategory.done()" href="javaScript:void(0);">Cancel</a>
         <a class="btn btn-success margin-right-ten" ng-click="ContentCategory.updateItem()"
             ng-disabled="ContentCategory.saving" href="javaScript:void(0);">{{ContentCategory.saving ? 'Saving...' :
             'Save'}}</a>
     </div>
+</div>
